# smartotum-controller

./: .dockerignore  .gitignore  Cargo.toml  README.md  build_image.sh  entrypoint.sh
.cargo/: config.toml
docker/: Dockerfile-OpenWrt
src/: main.rs
